samples/_failures_safe/1761344500_fb39c0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6277a041.c: In function ‘matrix_multiply’:
./samples/SAFE/__tmp_6277a041.c:131:17: error: expected declaration or statement at end of input
  131 |                 result[i][j] += (int)product;
      |                 ^~~~~~
./samples/SAFE/__tmp_6277a041.c:131:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6277a041.c:131:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6277a041.c:131:17: error: expected declaration or statement at end of input
